# postgresql-reviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a04d1ee63830_initial_3nf_schema.py  bdad84ddff9d_create_initial_schema.py
docs/: README.md
docs/endpoints/: connections.md  monitoring.md  review.md  rules.md  scheduler.md
docs/guides/: task_creation_guide.md
examples/: ci_cd_review.sh  test.py
migrations/: V001__initial_schema.sql  V001_init_database.sql  V002_test_data.sql
scripts/: run_migrations.sh  vault_setup.sh
src/: dependencies.py
src/api/: app.py  dependencies.py  main.py
src/api/routes/: config.py  connections.py  logs.py  monitoring.py  review.py  rules.py  scheduler.py  tasks.py
src/api/schemas/: __init__.py
src/api/static/: index.html
src/core/: config.py  constants.py  scoring.py
src/core/agents/: base.py  gigachat_agent.py  prompt_templates.py
src/core/types/: __init__.py
src/core/utils/: environment_mappings.py  json_helper.py
src/core/workflows/: __init__.py
src/kb/: ingest.py
src/kb/rules/: 01_indexing.md  02_select_star.md
src/kb/rules/config/: 01_work_mem_setting.md  02_shared_buffers_setting.md  03_effective_cache_size_setting.md  04_maintenance_work_mem_setting.md  05_max_connections_setting.md  06_checkpoint_settings.md  07_wal_settings.md  08_autovacuum_settings.md  (+10 more)
src/models/: __init__.py  base.py  connections.py  tags.py  tasks.py
src/repositories/: base.py  connections.py  tags.py  tasks.py
src/scheduler/: __init__.py  __main__.py  main.py  models.py  scheduler.py  worker.py
src/services/: database_service.py  postgres_service.py  review_service.py  scheduler_service.py  vault_service.py
src/store/: base.py  factory.py  faiss.py
tests/: conftest.py  test_api.py
(+30 files in other folders)
