[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{name = "dreadew", email = "p74ur@yandex.ru"}]
dependencies = [
  "langchain>=0.3.27",
  "langchain-gigachat>=0.3.12",
  "langchain-community>=0.3.29",
  "faiss-cpu>=1.12.0",
  "langgraph>=0.6.6",
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "python-dotenv>=1.1.1",
  "langsmith>=0.4.21",
  "langfuse>=3.3.4",
  "pydantic>=2.11.7",
  "sentence-transformers>=5.1.0",
  "pydantic-settings>=2.10.1",
  "psycopg2-binary>=2.9.7",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.1",
  "hvac>=2.1.0",
  "croniter>=1.4.1",
  "slowapi>=0.1.9",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.25.0",
  "asyncpg>=0.29.0",
]
description = "ИИ-агент для ревью SQL-запросов PostgreSQL с использованием LangGraph и GigaChat"
license = "MIT"
name = "postgresql-reviewer"
readme = "README.md"
requires-python = ">=3.11"
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["src"]
